fixed portfolio alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,3 +113,7 @@ $scheme5: #8860d0;
 	}
 		
 }
+
+.portfolio_pieces{
+	padding-bottom:200px;
+}
